
12 Июля:
- Фильтры для Idea через представление IdeasFilter(FilterView) в разделе ideas/list

13 Июля:
- Фильтры для Idea через запросы (без FilterView) на главной странице / Category + Status

14 Июля:
- Фильтры для Idea <Sort By ( Most Liked / Most Commented / Date ↑ / Date ↓ )> + Co-Authors + Investors
- Модель PreCoAuthor для настройки системы одобрений/отказов быть CoAuthor
- Уведомления при запросе Co-Author + реализация системы Accept / Reject

17 Июля:
- Stop being Co-Author
- Уведомления в обе стороны при Accept / Reject Co-Author
- Уведомление Stop being Co-Author

18 Июля:
- Уведомление New Idea для подписчиков пользователя
- Избранные Idea

19 Июля:
- Обновление меню пользователя (User Idea page / User Followers page / User Partnerships page)
- Обновление фронтенда (общий стиль, background)

22 Июля:
- Favourite Ideas в меню пользователя
- Investments в меню пользователя

24 Июля:
- Partnerships основная таблица

26 Июля:
- Подключен postgres
- Заполнение БД всеми моделями (кроме Investors)


СДЕЛАТЬ ПОСЛЕ:
- Система DM
- Уведомления, Favourite, Investment, Rating, DM
- Сделать View для IdeaStatus (чтобы одним нажатием менялся статус)
- Сделать View для Investors

- Модальные окна для всех подтверждений


Пофиксить:
- Модальное окно Update comment - не перезагружает страницу после успешного обновления



ДАЛЬНЕЙШИЕ ПЛАНЫ:
- Лента новостей
- Investment
- Сделать Rating
- Значки для групп
- Попробовать подключить API платежи для Investments
- Ветвление комментариев
- Доработать Users (Вывод по группам)
- Комментарии (добавить update вместо publicly если произошел update)
- Сделать Docker compose для запуска всех приложений
- Доработать форму Contacts (можно через модальное окно)
- Доработать Search
- Оптимизация SQL запросов

ВОПРОСЫ:
- Добавление нескольких изображений в одну модель (через другую модель?)
- Не работает check_comment_like в представлении comment