@@ -1,0 +1,11 @@
+#!/bin/bash
+#chmod +x docker_clear.sh
+#./docker_clear.sh
+
+docker compose down
+docker stop $(docker ps -aq)
+docker rm $(docker ps -aq)
+docker rmi $(docker images -q)
+docker volume rm $(docker volume ls -q)
+docker network rm $(docker network ls -q)
+docker system prune -a --volumes
