@@ -1,0 +1,25 @@
+upstream django_brainwave {
+    server django_brainwave:8000;
+}
+
+server {
+    listen 80;
+
+    server_name localhost 127.0.0.1;
+
+    location /static/ {
+        alias /app/static/;
+    }
+
+    location /media/ {
+        alias /app/media/;
+    }
+
+    location / {
+        proxy_pass http://brainwave:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
